--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
@@ -8,27 +8,15 @@
         margin: 0;
       }
     </style>
-    <title>kekedi音乐</title>
+    <title>勿忘国耻</title>
   </head>
-  <body background="一.jpg">
-     <p align="center"><img src="one.png" alt="图片1" widht="75px" height="75px" ></p>
-     <font color="gray"><p align="center">你好，我是kekedi</p></font>
-        <font color="gray"><p align="center">这是一个简单的<b>html后缀的一个网页</b></p></font>
-        <font color="gray"><p align="center">后期将会慢慢完善</p></font>
-        <font color="gray"><h3 align="center">点击➢可以播放音乐-《游京》</h3></font>
-     <audio src="1.mp3" controls style="width:100%"></audio>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <p align="center"><font color="red">部分代码来源于<b>   <font color="yellow">网络</font></b>，且不代表<b>   <font color="yellow">最终品质</font><b/><br/>此页面只放出<b>   <font color="yellow">部分代码</font></b></font></p>
- </body>
+  <body>
+    <img src="勿忘国耻.jpg" alt="JPG" height="200" width="400px">
+    <div style="background:gray;">
+     <p align="center">注意事项</br>1:本网站仅供参考，内容来源于网络</br>2:若有错误请发件到2661972761@qq.com</br>3:网站由 刻刻帝 制作，具体请 <a href="https://kekedi.neocities.org/" target="_blank" class="nav-link">点击查看</a></p>
+      </div>
+     <h3 align="center">日本人将中国人人头放成一排</h3>
+     <img src="南京1.jpg" alt="南京" width="350px" height="150px">
+     <p align="center">后面的等待更新......</p>
+</body>
 </html>
