--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
     <title>勿忘国耻</title>
   </head>
   <body>
+    <audio src="警钟.mp3" autoplay="autoplay" loop="loop"></audio>
     <img src="勿忘国耻.jpg" alt="JPG" height="200" width="400px">
     <div style="background:gray;">
      <p align="center">注意事项</br>1:本网站仅供参考，内容来源于网络</br>2:若有错误请发件到2661972761@qq.com</br>3:网站由 刻刻帝 制作，具体请 <a href="https://kekedi.neocities.org/" target="_blank" class="nav-link">点击查看</a></p>
       </div>
-     <h3 align="center">日本人将中国人人头放成一排</h3>
-     <img src="南京1.jpg" alt="南京" width="350px" height="150px">
-     <p align="center">后面的等待更新......</p>
+     <p align="center"><b>日本人将中国人人头放成一排</b></p>
+     <img src="南京1.jpg" alt="南京" width="400px" height="150px">
+     <p align="center"><b>摄影机拍下中国人头被砍下瞬间</b></p>
+     <p align="center"><img src="南京2.jpg" alt="南京" width="280px" height="170px"></p>
+     <p align="center"><b>日军使用机枪扫射我中国人<b></p>
+    <p align="center"> <img src="南京3.jpg" alt="南京" width="350px" height="230px"></p>
+     <p align="center"><b>即将被砍头的中国人···<b></p>
+     <img src="南京4.jpg" alt="南京" width="400px" height="250px">
+          <p align="center"><b>日军将我国人头颅放在···<b></p>
+     <img src="南京5.jpg" alt="南京" width="400px" height="250px">
+     <p align="center"><font size="3" color="red">后面的等待更新......</font></p>
 </body>
 </html>
