--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <audio src="警钟.mp3" autoplay="autoplay" loop="loop"></audio>
     <img src="勿忘国耻.jpg" alt="JPG" height="200" width="400px">
     <div style="background:gray;">
-     <p align="center">注意事项</br>1:本网站仅供参考，内容来源于网络</br>2:若有错误请发件到2661972761@qq.com</br>3:网站由 刻刻帝 制作，具体请 <a href="https://kekedi.neocities.org/" target="_blank" class="nav-link">点击查看</a></p>
+     <p align="center">注意事项</br>1:网站使用github制作并上传，可能有些许延迟</br>2:目前手机端仅QQ浏览器可以完全使用本网站功能</br>2:本网站仅供参考，内容来源于网络</br>3:若有错误请发件到2661972761@qq.com</br>4:网站由 刻刻帝 制作，具体请 <a href="https://kekedi.neocities.org/" target="_blank" class="nav-link">点击查看</a></p>
       </div>
      <p align="center"><b>日本人将中国人人头放成一排</b></p>
      <img src="南京1.jpg" alt="南京" width="400px" height="150px">
