--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         margin: 0;
       }
     </style>
-    <title>勿忘国耻</title>
+    <title>刻刻帝·勿忘国耻</title>
   </head>
   <body>
     <audio src="警钟.mp3" autoplay="autoplay" loop="loop"></audio>
